--- a/themes/ocean-night/layouts/partials/navbar.html
+++ b/themes/ocean-night/layouts/partials/navbar.html
@@ -1,9 +1,12 @@
 <body>
     <header>
         <div id="navbar">
-            <a id="navbar-logo" href="/",>Matt Potok</a>
+            <a id="navbar-logo" href="/">Matt Potok</a>
             <ul>
-                <li>
+                <li><a href="/blog/">Blog</a></li>
+                <li><a href="/projects/">Projects</a></li>
+                <li><a href="/research/">Research</a></li>
+                <li><a href="/about/">About</a></li>
             </ul>
         </div>
     </header>
