Completes header and footer

--- a/themes/ocean-night/layouts/index.html
+++ b/themes/ocean-night/layouts/index.html
@@ -1,7 +1,8 @@
 {{ partial "header.html" . }}
 {{ partial "navbar.html" . }}
 
+<main>
 Hello world!
-</body>
+</main>
 
 {{ partial "footer.html" . }}
