--- a/themes/ocean-night/layouts/partials/footer.html
+++ b/themes/ocean-night/layouts/partials/footer.html
@@ -1,1 +1,14 @@
+        <footer>
+            <div id="footbar" class="bar">
+                <div>
+                    <a href="https://github.com/mattpotok" target="_blank">
+                        <svg class="github-logo" height="20" width="20">
+                           <image x="0" y="0" height="20" width="20" xlink:href="images/mark-github.svg"/>
+                        </svg>
+                    </a>
+                </div>
+                <p class="bar-text">©&nbsp;2017 Matt Potok. Powered by <a href="http://gohugo.io">Hugo</a></p>
+            </div>
+        </footer>
+    </body>
 </html>
