--- a/themes/ocean-night/layouts/partials/navbar.html
+++ b/themes/ocean-night/layouts/partials/navbar.html
@@ -1,6 +1,6 @@
 <body>
     <header>
-        <div id="navbar">
+        <div id="navbar" class="bar">
             <a id="navbar-logo" href="/">Matt Potok</a>
             <ul>
                 <li><a href="/blog/">Blog</a></li>
