--- a/themes/ocean-night/static/css/style.css
+++ b/themes/ocean-night/static/css/style.css
@@ -7,28 +7,52 @@
     border: 0;
 }
 
-/**********
- * Navbar *
- **********/
-header {
+html, body {
+    height: 100%;
+}
+
+a {
+    color: #83BBE6;
+    text-decoration: none
+}
+
+a:hover {
+    text-decoration: underline;
+}
+
+/*****************
+ * Header/Footer *
+ *****************/
+
+/* Colors:
+ * #4078c0
+ * #83bbe6
+ * #C4E5FF
+ */
+
+header, footer {
     background-color: #1E2327;
     padding-top: 0.750em;
     padding-bottom: 0.750em;
     width: 100%;
 }
 
-#navbar {
+footer {
+    position: absolute;
+    bottom: 0;
+}
+
+.bar {
     display: flex;
     justify-content: space-between;
-    align-items: baseline;
-    padding-left: 20%;
-    padding-right: 20%;
+    align-items: flex-end;
+    margin: auto;
+    width: 50.000em;
 }
 
 #navbar-logo {
-    color: #C4E5FF;
+    color: #83BBE6;
     font-size: 2.500em;
-    text-decoration: none;
 }
 
 #navbar ul {
@@ -37,11 +61,26 @@ header {
 
 #navbar li {
     display: inline-block;
+    font-size: 1.500em;
+    padding-left: 1.000em;
+    padding-bottom: 0.125em;
 }
 
-#navbar li a {
-    color: #C4E5FF;
-    font-size: 1.500em;
-    padding: 0.000em;
-    text-decoration: none;
+.github-logo {
+    display: inline-block;
+    fill: currentColor;
+    vertical-align: text-top;
+}
+
+#footbar p {
+    color: #CCDDEA;
+    display: inline-block;
+    font-size: 1.000em;
+}
+
+/********
+ * Main *
+ ********/
+main {
+    background-color: #CCDDEA;
 }
