--- a/themes/ocean-night/layouts/partials/navbar.html
+++ b/themes/ocean-night/layouts/partials/navbar.html
@@ -3,9 +3,8 @@
         <div id="navbar" class="bar">
             <a id="navbar-logo" href="/">Matt Potok</a>
             <ul>
-                <li><a href="/blog/">Blog</a></li>
-                <li><a href="/projects/">Projects</a></li>
-                <li><a href="/research/">Research</a></li>
+                <li><a href="/post/">Blog</a></li>
+                <li><a href="/project/">Projects</a></li>
                 <li><a href="/about/">About</a></li>
             </ul>
         </div>
