--- a/themes/ocean-night/layouts/partials/header.html
+++ b/themes/ocean-night/layouts/partials/header.html
@@ -9,7 +9,7 @@
         {{ with .Site.Author.name }}<meta name="author" content="{{ . }}">{{ end }}
         {{ with .Site.Params.Description }}<meta name="description" content="{{ .  }}"> {{ end }}
 
-        <link rel="stylesheet" href="css/style.css" type="text/css">
+        <link rel="stylesheet" href="/css/style.css" type="text/css">
 
         <base href="{{ .Site.BaseURL }}">
         <title>{{ .Title }}</title>
