--- a/themes/ocean-night/layouts/post/single.html
+++ b/themes/ocean-night/layouts/post/single.html
@@ -3,9 +3,9 @@
 
 <main>
     <div id="content">
-        {{ range first 10 (where .Data.Pages "Type" "post") }}
-            {{ .Render "summary" }}
-        {{ end }}
+        <h1>{{ .Title }}</h1>
+        {{ .Content }}
+        {{ .Type }}
     </div>
 </main>
 
