--- a/themes/ocean-night/static/css/style.css
+++ b/themes/ocean-night/static/css/style.css
@@ -11,13 +11,13 @@ html, body {
     height: 100%;
 }
 
+body {
+    background-color: #F7FCFF;
+}
+
 a {
     color: #83BBE6;
     text-decoration: none
-}
-
-a:hover {
-    text-decoration: underline;
 }
 
 /*****************
@@ -35,6 +35,10 @@ header, footer {
     padding-top: 0.750em;
     padding-bottom: 0.750em;
     width: 100%;
+}
+
+header {
+    margin-bottom: 2.000em;
 }
 
 footer {
@@ -73,7 +77,7 @@ footer {
 }
 
 #footbar p {
-    color: #CCDDEA;
+    color: #F7FCFF;
     display: inline-block;
     font-size: 1.000em;
 }
@@ -81,6 +85,9 @@ footer {
 /********
  * Main *
  ********/
-main {
-    background-color: #CCDDEA;
+#content {
+    max-width: 50.000em;
+    margin: auto;
 }
+
+article 
