Better working state

--- a/themes/ocean-night/layouts/partials/navbar.html
+++ b/themes/ocean-night/layouts/partials/navbar.html
@@ -1,7 +1,7 @@
 <body>
     <header>
         <div id="navbar" class="bar">
-            <a id="navbar-logo" href="/">Matt Potok</a>
+            <h1><a href="/">Matt Potok</a></h1>
             <ul>
                 <li><a href="/post/">Blog</a></li>
                 <li><a href="/project/">Projects</a></li>
