--- a/themes/ocean-night/layouts/partials/footer.html
+++ b/themes/ocean-night/layouts/partials/footer.html
@@ -7,7 +7,8 @@
                         </svg>
                     </a>
                 </div>
-                <p class="bar-text">©&nbsp;2017 Matt Potok. Powered by <a href="http://gohugo.io">Hugo</a></p>
+                <p class="bar-text">©&nbsp;2017 Matt Potok. Powered by 
+                    <a href="http://gohugo.io" target="_blank">Hugo</a></p>
             </div>
         </footer>
     </body>
