Completes about, project, and blog pages for large-display devices

--- a/themes/ocean-night/layouts/index.html
+++ b/themes/ocean-night/layouts/index.html
@@ -2,7 +2,7 @@
 {{ partial "navbar.html" . }}
 
 <main>
-    <div id="content">
+    <div class="article">
         {{ range first 10 (where .Data.Pages "Type" "post") }}
             {{ .Render "summary" }}
         {{ end }}
