--- a/themes/ocean-night/layouts/partials/navbar.html
+++ b/themes/ocean-night/layouts/partials/navbar.html
@@ -1,11 +1,11 @@
-<body>
-    <header>
-        <div id="navbar" class="bar">
-            <h1><a href="/">Matt Potok</a></h1>
-            <ul>
-                <li><a href="/post/">Blog</a></li>
-                <li><a href="/project/">Projects</a></li>
-                <li><a href="/about/">About</a></li>
-            </ul>
-        </div>
-    </header>
+    <body>
+        <header>
+            <div id="navbar" class="bar">
+                <h1><a href="/">Matt Potok</a></h1>
+                <ul>
+                    <li><a href="/post/">Blog</a></li>
+                    <li><a href="/projects/">Projects</a></li>
+                    <li><a href="/about/">About</a></li>
+                </ul>
+            </div>
+        </header>
