--- a/themes/ocean-night/layouts/post/li.html
+++ b/themes/ocean-night/layouts/post/li.html
@@ -1,4 +1,4 @@
 <li>
-    <a href="{{ .Permalink }}">{{ .Title }}</a>
+    <h3><a href="{{ .Permalink }}">{{ .Title }}</a></h3>
     <div>{{ .Date.Format "Mon, Jan 2, 2006" }}</div>
 </li>
