--- a/themes/ocean-night/layouts/post/summary.html
+++ b/themes/ocean-night/layouts/post/summary.html
@@ -1,13 +1,8 @@
 <div class="post-summary">
-    <!--Move this a back to the header location -->
-    <a href="{{ .Permalink }}">
-        <div class="content">
-            <div class="header">
-                <h2>{{ .Title }}</h2>
-                {{ .Date.Format "Mon, Jan 2, 2006" }}
-            </div>
+    <div class="header">
+        <h2><a href="{{ .Permalink }}">{{ .Title }}</a></h2>
+        {{ .Date.Format "Mon, Jan 2, 2006" }}
+    </div>
 
-            {{ .Summary }}
-        </div>
-    </a>
+    {{ .Summary }}
 </div>
