--- a/themes/ocean-night/static/css/style.css
+++ b/themes/ocean-night/static/css/style.css
@@ -79,9 +79,9 @@ footer {
     padding-left: 1.000em;
 }
 
-.github-logo {
+.footer-logo {
     display: inline-block;
-    fill: currentColor;
+    padding-left: 0.250em;
     vertical-align: text-top;
 }
 
